--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ results/statistics/2007_2016*.csv
 !data/input/pcgroup_mean_coordinates.csv
 !data/input/DCRB_Historic_Closures_CA_updated.csv
 results/figures/*.png
-results/figures/fig1/Figure1.png
-results/figures/fig1/Figure1.ppt
-results/figures/fig1/Figure1.pptx
+results/figures/*.pdf
+results/figures/fig1/*.png
+results/figures/fig1/*.ppt
+results/figures/fig1/*.pptx
+results/figures/fig1/*.pdf
+scripts/00_calculate_vessel_lengths.Rmd
