--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,18 @@ data/input/*.csv
 data/input/length/*.csv
 data/input/metiers/*.csv
 data/intermediate_metiers/reference/*.csv
+data/networks/vessel_flow/*.rds
+data/networks/participation/*.rds
+data/networks/participation/3yr_mean/*.rds
 results/statistics/*SPEARMAN.csv
 results/statistics/2007_2016*.csv
 !data/input/pcgroup_mean_coordinates.csv
 !data/input/DCRB_Historic_Closures_CA_updated.csv
-results/figures/*.png
+results/figures/in_prep*
 results/figures/*.pdf
-results/figures/fig1/*.png
+results/figures/fig1/in_prep*
 results/figures/fig1/*.ppt
 results/figures/fig1/*.pptx
 results/figures/fig1/*.pdf
 results/figures/TableS*
+results/figures/*.png
