--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/input/length/*.csv
 data/input/metiers/*.csv
 data/intermediate_metiers/reference/*.csv
 !data/networks/vessel_flow/*.csv
+!data/networks/participation/3yr_mean/*.rds
 !data/input/pcgroup_mean_coordinates.csv
 !data/input/DCRB_Historic_Closures_CA_updated.csv
 results/statistics/*SPEARMAN.csv
